// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-5 {
  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.15),0px 0px 2px 1px rgba(0,0,0,0.02) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

<div
  aria-describedby="id-test"
  class="emotion-3 emotion-0 emotion-5 bb-Box bb-Card"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-CardContent bb-Box"
    id="id-test"
  >
    Hello world
  </div>
</div>
`;

exports[`composition hook should return with Card props 1`] = `
Object {
  "aria-describedby": undefined,
  "aria-labelledby": undefined,
  "children": <Context.Provider
    value={
      Object {
        "colorMode": "default",
        "descriptionId": "id-test",
        "titleId": "id-test",
        "variant": "shadowed",
      }
    }
  >
    <React.Fragment>
      <CardContent />
    </React.Fragment>
  </Context.Provider>,
  "className": "css-1dct1o4 css-63it0p css-ou2ups bb-Box bb-Card",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-2 {
  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.15),0px 0px 2px 1px rgba(0,0,0,0.02) !important;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Card"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-5 {
  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.15),0px 0px 2px 1px rgba(0,0,0,0.02) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

<div
  aria-describedby="id-test"
  class="emotion-3 emotion-0 emotion-5 test bb-Box bb-Card"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-CardContent bb-Box"
    id="id-test"
  >
    hello world
  </div>
</div>
`;

exports[`defaultProps should render correctly for title 1`] = `
.emotion-12 {
  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.15),0px 0px 2px 1px rgba(0,0,0,0.02) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

.emotion-6 {
  margin-bottom: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  font-weight: 600;
  font-size: 1.25em;
}

<div
  aria-describedby="id-test"
  aria-labelledby="id-test"
  class="emotion-10 emotion-0 emotion-12 bb-Box bb-Card"
>
  <div
    class="emotion-3 emotion-0 emotion-1 emotion-6 bb-CardHeader bb-Box bb-Flex"
  >
    <div
      class="emotion-0 emotion-1 emotion-2 bb-CardTitle bb-Box"
      id="id-test"
    >
      This is a title
    </div>
  </div>
  <div
    class="emotion-0 emotion-1 emotion-9 bb-CardContent bb-Box"
    id="id-test"
  >
    hello world
  </div>
</div>
`;

exports[`defaultProps should render correctly for variant 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

<div
  aria-describedby="id-test"
  class="emotion-3 emotion-0 emotion-5 bb-Box bb-Card"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-CardContent bb-Box"
    id="id-test"
  >
    hello world
  </div>
</div>
`;

exports[`overrides Card.Content.styles.base should render correctly 1`] = `
.emotion-5 {
  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.15),0px 0px 2px 1px rgba(0,0,0,0.02) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

.emotion-2 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  aria-describedby="id-test"
  class="emotion-3 emotion-0 emotion-5 bb-Box bb-Card"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-CardContent bb-Box"
    id="id-test"
  >
    hello world
  </div>
</div>
`;

exports[`overrides Card.Footer.styles.base should render correctly 1`] = `
.emotion-10 {
  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.15),0px 0px 2px 1px rgba(0,0,0,0.02) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

.emotion-7 {
  margin-top: 1.5rem;
}

.emotion-7 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  aria-describedby="id-test"
  class="emotion-8 emotion-0 emotion-10 bb-Box bb-Card"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-CardContent bb-Box"
    id="id-test"
  >
    hello world
  </div>
  <div
    class="emotion-0 emotion-1 emotion-7 bb-CardFooter bb-Box"
  >
    <div
      class="emotion-0 emotion-1 bb-Box"
    >
      This is a footer
    </div>
  </div>
</div>
`;

exports[`overrides Card.Header.styles.base should render correctly 1`] = `
.emotion-12 {
  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.15),0px 0px 2px 1px rgba(0,0,0,0.02) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  font-weight: 600;
  font-size: 1.25em;
}

.emotion-6 {
  margin-bottom: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-6 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  aria-describedby="id-test"
  aria-labelledby="id-test"
  class="emotion-10 emotion-0 emotion-12 bb-Box bb-Card"
>
  <div
    class="emotion-3 emotion-0 emotion-1 emotion-6 bb-CardHeader bb-Box bb-Flex"
  >
    <div
      class="emotion-0 emotion-1 emotion-2 bb-CardTitle bb-Box"
      id="id-test"
    >
      This is a title
    </div>
  </div>
  <div
    class="emotion-0 emotion-1 emotion-9 bb-CardContent bb-Box"
    id="id-test"
  >
    hello world
  </div>
</div>
`;

exports[`overrides Card.Title.styles.base should render correctly 1`] = `
.emotion-12 {
  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.15),0px 0px 2px 1px rgba(0,0,0,0.02) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

.emotion-6 {
  margin-bottom: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  font-weight: 600;
  font-size: 1.25em;
}

.emotion-2 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  aria-describedby="id-test"
  aria-labelledby="id-test"
  class="emotion-10 emotion-0 emotion-12 bb-Box bb-Card"
>
  <div
    class="emotion-3 emotion-0 emotion-1 emotion-6 bb-CardHeader bb-Box bb-Flex"
  >
    <div
      class="emotion-0 emotion-1 emotion-2 bb-CardTitle bb-Box"
      id="id-test"
    >
      This is a title
    </div>
  </div>
  <div
    class="emotion-0 emotion-1 emotion-9 bb-CardContent bb-Box"
    id="id-test"
  >
    hello world
  </div>
</div>
`;

exports[`overrides Card.styles.base should render correctly 1`] = `
.emotion-5 {
  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.15),0px 0px 2px 1px rgba(0,0,0,0.02) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

.emotion-3 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  aria-describedby="id-test"
  class="emotion-3 emotion-0 emotion-5 bb-Box bb-Card"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-CardContent bb-Box"
    id="id-test"
  >
    hello world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-5 {
  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.15),0px 0px 2px 1px rgba(0,0,0,0.02) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

<div
  aria-describedby="id-test"
  class="emotion-3 emotion-0 emotion-5 bb-Box bb-Card"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-CardContent bb-Box"
    id="id-test"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly for a footer 1`] = `
.emotion-10 {
  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.15),0px 0px 2px 1px rgba(0,0,0,0.02) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

.emotion-7 {
  margin-top: 1.5rem;
}

<div
  aria-describedby="id-test"
  class="emotion-8 emotion-0 emotion-10 bb-Box bb-Card"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-CardContent bb-Box"
    id="id-test"
  >
    Hello world
  </div>
  <div
    class="emotion-0 emotion-1 emotion-7 bb-CardFooter bb-Box"
  >
    <div
      class="emotion-0 emotion-1 bb-Box"
    >
      This is a footer
    </div>
  </div>
</div>
`;

exports[`props should render correctly for a title 1`] = `
.emotion-12 {
  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.15),0px 0px 2px 1px rgba(0,0,0,0.02) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

.emotion-6 {
  margin-bottom: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  font-weight: 600;
  font-size: 1.25em;
}

<div
  aria-describedby="id-test"
  aria-labelledby="id-test"
  class="emotion-10 emotion-0 emotion-12 bb-Box bb-Card"
>
  <div
    class="emotion-3 emotion-0 emotion-1 emotion-6 bb-CardHeader bb-Box bb-Flex"
  >
    <div
      class="emotion-0 emotion-1 emotion-2 bb-CardTitle bb-Box"
      id="id-test"
    >
      This is a title
    </div>
  </div>
  <div
    class="emotion-0 emotion-1 emotion-9 bb-CardContent bb-Box"
    id="id-test"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly for headerAddon 1`] = `
.emotion-5 {
  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.15),0px 0px 2px 1px rgba(0,0,0,0.02) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

<div
  aria-describedby="id-test"
  class="emotion-3 emotion-0 emotion-5 bb-Box bb-Card"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-CardContent bb-Box"
    id="id-test"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly for standalone 1`] = `
.emotion-15 {
  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.15),0px 0px 2px 1px rgba(0,0,0,0.02) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-13 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

.emotion-6 {
  margin-bottom: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  font-weight: 600;
  font-size: 1.25em;
}

.emotion-12 {
  margin-top: 1.5rem;
}

<div
  aria-describedby="id-test"
  class="emotion-13 emotion-0 emotion-15 bb-Box bb-Card"
>
  <div
    class="emotion-3 emotion-0 emotion-1 emotion-6 bb-CardHeader bb-Box bb-Flex"
  >
    <div
      class="emotion-0 emotion-1 emotion-2 bb-CardTitle bb-Box"
      id="id-test"
    >
      This is a title
    </div>
  </div>
  <div
    class="emotion-0 emotion-1 emotion-9 bb-CardContent bb-Box"
    id="id-test"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse diam ipsum, cursus id placerat congue, ultrices eget lectus. Duis posuere, lacus sed tristique commodo, sapien turpis mollis nunc, vestibulum consectetur lectus augue sit amet justo.
  </div>
  <div
    class="emotion-0 emotion-1 emotion-12 bb-CardFooter bb-Box"
  >
    This is a footer
  </div>
</div>
`;

exports[`props should render correctly for variant border 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

<div
  aria-describedby="id-test"
  class="emotion-3 emotion-0 emotion-5 bb-Box bb-Card"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-CardContent bb-Box"
    id="id-test"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly for variant shadow 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

<div
  aria-describedby="id-test"
  class="emotion-3 emotion-0 emotion-5 bb-Box bb-Card"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-CardContent bb-Box"
    id="id-test"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

.emotion-5 {
  color: var(--bb-palette-primary,#000000) !important;
}

.emotion-5 {
  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.15),0px 0px 2px 1px rgba(0,0,0,0.02) !important;
}

<div
  aria-describedby="id-test"
  class="emotion-3 emotion-0 emotion-5 bb-Box bb-Card"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-CardContent bb-Box"
    id="id-test"
  >
    Hello world
  </div>
</div>
`;

exports[`theming Card.Content.styles.base should render correctly 1`] = `
.emotion-5 {
  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.15),0px 0px 2px 1px rgba(0,0,0,0.02) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

.emotion-2 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  aria-describedby="id-test"
  class="emotion-3 emotion-0 emotion-5 bb-Box bb-Card"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-CardContent bb-Box"
    id="id-test"
  >
    hello world
  </div>
</div>
`;

exports[`theming Card.Footer.styles.base should render correctly 1`] = `
.emotion-10 {
  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.15),0px 0px 2px 1px rgba(0,0,0,0.02) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

.emotion-7 {
  margin-top: 1.5rem;
}

.emotion-7 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  aria-describedby="id-test"
  class="emotion-8 emotion-0 emotion-10 bb-Box bb-Card"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-CardContent bb-Box"
    id="id-test"
  >
    hello world
  </div>
  <div
    class="emotion-0 emotion-1 emotion-7 bb-CardFooter bb-Box"
  >
    <div
      class="emotion-0 emotion-1 bb-Box"
    >
      This is a footer
    </div>
  </div>
</div>
`;

exports[`theming Card.Header.styles.base should render correctly 1`] = `
.emotion-12 {
  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.15),0px 0px 2px 1px rgba(0,0,0,0.02) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  font-weight: 600;
  font-size: 1.25em;
}

.emotion-6 {
  margin-bottom: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-6 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  aria-describedby="id-test"
  aria-labelledby="id-test"
  class="emotion-10 emotion-0 emotion-12 bb-Box bb-Card"
>
  <div
    class="emotion-3 emotion-0 emotion-1 emotion-6 bb-CardHeader bb-Box bb-Flex"
  >
    <div
      class="emotion-0 emotion-1 emotion-2 bb-CardTitle bb-Box"
      id="id-test"
    >
      This is a title
    </div>
  </div>
  <div
    class="emotion-0 emotion-1 emotion-9 bb-CardContent bb-Box"
    id="id-test"
  >
    hello world
  </div>
</div>
`;

exports[`theming Card.Title.styles.base should render correctly 1`] = `
.emotion-12 {
  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.15),0px 0px 2px 1px rgba(0,0,0,0.02) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

.emotion-6 {
  margin-bottom: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  font-weight: 600;
  font-size: 1.25em;
}

.emotion-2 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  aria-describedby="id-test"
  aria-labelledby="id-test"
  class="emotion-10 emotion-0 emotion-12 bb-Box bb-Card"
>
  <div
    class="emotion-3 emotion-0 emotion-1 emotion-6 bb-CardHeader bb-Box bb-Flex"
  >
    <div
      class="emotion-0 emotion-1 emotion-2 bb-CardTitle bb-Box"
      id="id-test"
    >
      This is a title
    </div>
  </div>
  <div
    class="emotion-0 emotion-1 emotion-9 bb-CardContent bb-Box"
    id="id-test"
  >
    hello world
  </div>
</div>
`;

exports[`theming Card.styles.base should render correctly 1`] = `
.emotion-5 {
  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.15),0px 0px 2px 1px rgba(0,0,0,0.02) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  padding: 1.5rem;
}

.emotion-3 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  aria-describedby="id-test"
  class="emotion-3 emotion-0 emotion-5 bb-Box bb-Card"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-CardContent bb-Box"
    id="id-test"
  >
    hello world
  </div>
</div>
`;
